2009-01-02  Michael Wiegand <michael.wiegand@intevation.de>

	* configure: Regenerated to completely remove --enable-debug-store.

2009-01-01  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	More patches by Stjepan Gros in preparation of
	Change Request #24 (subdirs for NVTs,
	http://www.openvas.org/openvas-cr-24.html).

	* libopenvas/store.c: Replaced any call of plug_get_fname
	by plug_get_cachefile.
	(store_load_plugin): Replaced call of plug_set_fname by
	plug_set_cachefile.

	* libopenvas/plugutils.c (plug_get_fname, plug_set_fname): Removed.

2008-12-31  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	As Result of CR #20, added two doxygen configuration files and targets
	to generated source documentation.
	
	* doc/Doxyfile: Added. Basic configuration file.

	* doc/Doxyfile_full: Added. Enables graph generation.
	
	* Makefile: Targets 'doc' and 'doc_full' added, 'clean' altered, such
	that it will remove generated documentation found in doc/generated.

2008-12-31  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* configure.in, include/config.h.in: Removed any remains
	of DEBUG_STORE as it is not used anywhere in the code.
	This also removed the configure option "--enable-debug-store".

2008-12-30  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* libopenvas/store.c: Removed OLD_CVE_SZ, OLD_BID_SZ and
	OLD_XREF_SZ and their use because this is only meant
	to support rather old version of Nessus.
	The removed code was conditionally for DEBUG_STORE anyway.

2008-12-30  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	Removing unused code.

	* libopenvas/store.c (store_fetch_dependencies, store_fetch_timeout,
	store_fetch_name):
	Removed. This function is never called since a long time.

	* libopenvas/store_internal.h: Removed proto for
	store_fetch_dependencies, store_fetch_name and store_fetch_timeout.

	* libopenvas/plugutils.c (plug_get_deps, plug_get_timeout,
	plug_get_name):
	Removed code that is never executed.
