@@ -1,3 +1,7 @@
+2009-01-02  Felix Wolfsteller <felix.wolfsteller@intevation.de>
+
+	* libopenvas/kb.c: Documentation.
+
 2009-01-02  Michael Wiegand <michael.wiegand@intevation.de>
 
 	* configure: Regenerated to completely remove --enable-debug-store.
